# todo-app

./: README.md  pyproject.toml  requirements.txt  setup.py
tests/: test_app.py
todo_app/: __init__.py  app.py  todo_app.py
todo_app/data/: tasks.json
