[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "todo-app"
version = "0.3.0"
description = "Simple todo app with python tkinter GUI"
readme = "README.md"
license = { text = "GPL" }
authors = [
  { name = "Jens Lettkemann", email = "jltk@pm.me" }
]
dependencies = [
  "tkinter"
]
